<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bars_image">

<TextView
    android:id="@+id/loginPage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="95dp"
    android:layout_marginTop="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/loginPage"
    android:textColor="#00F5FF" />

<TextView
android:id="@+id/usernameText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentLeft="true"
android:layout_below="@+id/loginPage"
android:layout_marginTop="75dp"
android:layout_marginLeft="10dp"
android:text="@string/username1"
    android:textColor="#00F5FF" />

<EditText
android:id="@+id/username"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignBottom="@+id/usernameText"
android:layout_marginLeft="30dp"
android:layout_toRightOf="@+id/usernameText"
android:hint="@string/username2"
    android:textColor="#00F5FF">
<requestFocus />
</EditText>

<TextView
android:id="@+id/passwordText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignLeft="@+id/usernameText"
android:layout_below="@+id/usernameText"
android:layout_marginTop="35dp"
android:text="@string/password1"
    android:textColor="#00F5FF" />

<EditText
android:id="@+id/password"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignBottom="@+id/passwordText"
android:layout_alignLeft="@+id/username"
android:layout_alignRight="@+id/username"
android:inputType="textPassword"
android:hint="@string/password2"
    android:textColor="#00F5FF" />

<TextView
android:id="@+id/attemptsLeft"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignLeft="@+id/passwordText"
android:layout_below="@+id/passwordText"
android:layout_marginLeft="60dp"
android:layout_marginTop="50dp"
android:text="@string/attemptsLeft"
    android:textColor="#00F5FF" />

<Button
android:id="@+id/LoginButton"
android:layout_width="200dp"
android:layout_height="wrap_content"
    android:text="@string/login"
    android:layout_below="@+id/attemptsLeft"
    android:layout_toStartOf="@+id/loginLocked"
    android:layout_marginTop="55dp" />

<TextView
android:id="@+id/numberOfRemainingLoginAttempts"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignRight="@+id/loginPage"
android:layout_alignTop="@+id/attemptsLeft"
    />

<TextView
android:id="@+id/loginLocked"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_below="@+id/LoginButton"
android:layout_marginTop="40dp"
android:layout_centerHorizontal="true"
android:visibility="invisible" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_alignTop="@+id/LoginButton"
        android:layout_toEndOf="@+id/loginLocked" />

</RelativeLayout>

