<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paddy.barfinderapp2.RegisterScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerUsername1"
        android:id="@+id/textView2"
        android:layout_marginTop="89dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerPassword1"
        android:id="@+id/textView3"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/button"
        android:layout_marginBottom="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registerPage"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword1ET"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:text="@string/registerPassword1Input" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/registerUsername2"
        android:ems="10"
        android:id="@+id/registerUsernameET"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/registerPassword1ET" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword2ET"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/registerPassword1ET"
        android:text="@string/registerPassword2Input" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerPassword2"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/registerPassword2ET"
        android:layout_toStartOf="@+id/registerPassword2ET" />
</RelativeLayout>
